--- a/_includes/_sections/about.html
+++ b/_includes/_sections/about.html
@@ -14,9 +14,9 @@
       <b>CS @ Stony Brook University</b>
       <br>
       <br>
-      I enjoy coding, tinkering with
+      Welcome to my page. My name is Jon Tow (pronounced like the Greek letter τ, not like the tow &#128666). I enjoy coding, tinkering with
       machine learning models,
-      and pretending to be a musician.
+      and competing in amateur sporting events.
       <br>
       I'm always looking for new things to learn. 
     </p>
@@ -24,23 +24,17 @@
 
     <!-- Resume -->
     <p>
-      <i style="color: var(--main-color);" class="fas fa-file-alt fa-md"></i>
-      <span class="pb-2 pl-1">
-        <a href="../../data/resume.pdf">
-        resume
-        </a>
+      <span class="pb-2">
+        <a href="../../data/resume.pdf">resume</a>
       </span>
     </p>
     <!-- End of Resume Row -->
 
     <!-- Resume -->
     <p>
-      <i style="color: var(--main-color);" class="fas fa-envelope fa-sm"></i>
-      <span class="pl-1">
-        <a href="jonathantow1@gmail.com">
-          jonathantow1 @ gmail.com
-        </a>
-      </span> 
+      <a href="jonathantow1@gmail.com">
+        jonathantow1 @ gmail.com
+      </a>
     </p>
     <!-- End of Resume Row -->
 
