--- a/_includes/_sections/projects.html
+++ b/_includes/_sections/projects.html
@@ -45,7 +45,7 @@
         <div class="project-item col-sm">
           <h4>
             <a href="projects/impossible-tic-tac-toe/index.html">
-              Impossible Tic-Tac-Toe <i class="fas fa-gamepad"></i>
+              Impossible Tic-Tac-Toe
             </a>
           </h4>
           <p>
@@ -57,7 +57,7 @@
         <div class="project-item col-sm">
           <h4>
             <a href="projects/sudoku-solver/index.html">
-              Sudoku Solver <i class="fas fa-gamepad"></i>
+              Sudoku Solver
             </a>
           </h4>
           <p>
@@ -75,7 +75,7 @@
         <div class="project-item col-sm">
           <h4>
             <a href="projects/maze-solver/index.html">
-              Maze Solver <i class="fas fa-gamepad"></i>
+              Maze Solver
             </a>
           </h4>
           <p>
