--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,10 +7,8 @@
 
   <body class="" data-spy="scroll" data-target="#myScrollspy" data-offset="20">
     {% include _base/nav.html %}
-    <main class="contaier">
-      <div class="row">
+    <main class="">
 	{{ content }}
-      </div>
     </main>
     {% include _base/footer.html %}
   </body>
