--- a/_includes/_sections/about.html
+++ b/_includes/_sections/about.html
@@ -18,26 +18,28 @@
       machine learning models,
       and competing in amateur sporting events.
       <br>
-      I'm always looking for new things to learn. 
     </p>
     <!-- End of Bio Row -->
-
-    <!-- Resume -->
     <p>
-      <span class="pb-2">
-        <a href="../../data/resume.pdf">resume</a>
-      </span>
-    </p>
-    <!-- End of Resume Row -->
 
-    <!-- Resume -->
-    <p>
-      <a href="jonathantow1@gmail.com">
-        jonathantow1 @ gmail.com
-      </a>
-    </p>
-    <!-- End of Resume Row -->
+      I also take up server space over in these parts:
 
+      <ul style="list-style: none;">
+	<li>
+	  <a class="" href="https://github.com/jon-tow">   
+	    &#128049; github
+	</a> </li>
+	<li>
+	  <a class="" href="https://twitter.com/jonbtow">
+	    &#128038; twitter
+	  </a>
+	</li>
+	<li>
+	  <a href="jonathantow1@gmail.com">
+	    &#128231; jonathantow1 @ gmail
+	  </a>
+	</li>
+    </ul> </p>
   </div>
 
   <!-- End of Content -->
