--- a/_includes/_base/nav.html
+++ b/_includes/_base/nav.html
@@ -7,15 +7,12 @@
     <div class="navbar ml-0 navbar-expand mb-0 pb-0">
       <div class="collapse navbar-collapse pt-0" id="navbarNav">
 	<p>
-          <a class="" href="#about">about</a> / 
-          <a class="" href="#project">projects</a> / 
-          <a class="" href="#notes">notes</a> / 
-          <a class="" href="https://github.com/jon-tow">
-            <i class="fab fa-github fa-lg"></i> 
-          </a> /
-          <a class="" href="https://twitter.com/jonbtow">
-            <i class="fab fa-twitter fa-lg"></i>
-          </a>
+          <a class="" href="#about">&#128373;
+ about</a> / 
+          <a class="" href="#project">&#128187;
+ projects</a> / 
+          <a class="" href="#notes">&#128221;
+ notes</a> 
 	</p>
       </div>
     </div>
