--- a/_includes/_sections/about.html
+++ b/_includes/_sections/about.html
@@ -24,7 +24,7 @@
 
       I also take up server space over in these parts:
 
-      <ul style="list-style: none;">
+      <ul style="list-style: none; margin: 0em;">
 	<li>
 	  <a class="" href="https://github.com/jon-tow">   
 	    &#128049; github
