--- a/_includes/_base/nav.html
+++ b/_includes/_base/nav.html
@@ -1,18 +1,15 @@
 <nav id="nav">
-  <div class="mb-0">
+  <div class="mb-0 w-100">
     <span class="navbar-brand" href="{{site.url}}">
-      Jon Tow
+      <h2>Jon Tow</h2>
     </span>
 
-    <div class="navbar ml-0 navbar-expand mb-0 pb-0">
-      <div class="collapse navbar-collapse pt-0" id="navbarNav">
+    <div class="navbar ml-0 navbar-expand mb-0 pt-0 pb-0">
+      <div class="collapse navbar-collapse" id="navbarNav">
 	<p>
-          <a class="" href="#about">&#128373;
- about</a> / 
-          <a class="" href="#project">&#128187;
- projects</a> / 
-          <a class="" href="#notes">&#128221;
- notes</a> 
+          <a class="" href="#about"> about</a> / 
+          <a class="" href="#project"> projects</a> / 
+          <a class="" href="#notes"> notes</a> 
 	</p>
       </div>
     </div>
