--- a/_includes/_base/head.html
+++ b/_includes/_base/head.html
@@ -1,11 +1,7 @@
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport"
-	content="width=device-width, initial-scale=1">
-  <link rel="icon"
-	href="../../data/favicon.ico"
-	type="image/gif"
-	sizes="16x16">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="../../data/favicon.ico" type="image/gif" sizes="16x16">
 
   <!-- Style -->
   <link rel="stylesheet"
@@ -17,7 +13,6 @@
   <link rel="stylesheet" href="/assets/css/syntax.css">  
 
   <!-- Scripts -->
-  
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
   </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
