--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -153,7 +153,7 @@ section {
     padding: var(--base-height-padding) .5em 0em .5em;
     margin-bottom: var(--base-height-padding);
 
-    border-top: 1px solid rgb(75, 75, 75, .1);
+    border-top: 2px solid #ededed;
 }
 
 .section-header {
