--- a/_includes/_sections/about.html
+++ b/_includes/_sections/about.html
@@ -9,6 +9,7 @@
 
   <!-- Content -->
   <div class="section-content">
+
     <!-- Bio Row -->
     <p style="text-align: justify;">
       <b>CS @ Stony Brook University</b>
@@ -20,26 +21,31 @@
       <br>
     </p>
     <!-- End of Bio Row -->
+    
     <p>
-
-      I also take up server space over in these parts:
+      I also take up some server space over in these parts:
 
       <ul style="list-style: none; margin: 0em;">
 	<li>
+	  &#128049;
 	  <a class="" href="https://github.com/jon-tow">   
-	    &#128049; github
-	</a> </li>
+	    github
+	  </a>
+	</li>
 	<li>
+	  &#128038;
 	  <a class="" href="https://twitter.com/jonbtow">
-	    &#128038; twitter
+	    twitter
 	  </a>
 	</li>
 	<li>
+	  &#128231;
 	  <a href="jonathantow1@gmail.com">
-	    &#128231; jonathantow1 @ gmail
+	    jonathantow1 @ gmail
 	  </a>
 	</li>
-    </ul> </p>
+      </ul>
+    </p>
   </div>
 
   <!-- End of Content -->
