--- a/_includes/_sections/notes.html
+++ b/_includes/_sections/notes.html
@@ -9,25 +9,26 @@
     </div>
   </div>
 
-  <div class="section-content" style="">
-    <ul class="entry-previews" >
-      <!-- Under construction. Coming soon. -->
-      {% for post in site.posts %}
-      <li class="pb-3">
-      	<p class="post-preview">
-      	  <span style="font-size: .95em; color: var(--light-black)">
-	    {{post.date | date: '%B %d, %Y'}}
-      	  </span>
-      	  <br>
-      	  <a href="{{ post.url }}" style="font-size: 1.15em;">
-      	    {{ post.title }}
-      	  </a>
-      	  <br>
-      	  {{ post.introduction }}
-      	</p>
-      </li>
-      {% endfor %}
-    </ul>      
-  </div>
+  <div class="section-content"> Under construction. Writing soon!</div>
+  <!-- <div class="section-content" style=""> -->
+  <!--   <ul class="entry-previews" > -->
+  <!--     <\!-- Under construction. Coming soon. -\-> -->
+  <!--     {% for post in site.posts %} -->
+  <!--     <li class="pb-3"> -->
+  <!--     	<p class="post-preview"> -->
+  <!--     	  <span style="font-size: .95em; color: var(--light-black)"> -->
+  <!-- 	    {{post.date | date: '%B %d, %Y'}} -->
+  <!--     	  </span> -->
+  <!--     	  <br> -->
+  <!--     	  <a href="{{ post.url }}" style="font-size: 1.15em;"> -->
+  <!--     	    {{ post.title }} -->
+  <!--     	  </a> -->
+  <!--     	  <br> -->
+  <!--     	  {{ post.introduction }} -->
+  <!--     	</p> -->
+  <!--     </li> -->
+  <!--     {% endfor %} -->
+  <!--   </ul>       -->
+  <!-- </div> -->
 
 </section>
