--- a/_includes/_base/nav.html
+++ b/_includes/_base/nav.html
@@ -7,9 +7,9 @@
     <div class="navbar ml-0 navbar-expand mb-0 pt-0 pb-0">
       <div class="collapse navbar-collapse" id="navbarNav">
 	<p>
-          <a class="" href="#about"> about</a> / 
-          <a class="" href="#project"> projects</a> / 
-          <a class="" href="#notes"> notes</a> 
+          <a href="#about"> about</a> / 
+          <a href="#project"> projects</a> / 
+          <a href="#notes"> notes</a> 
 	</p>
       </div>
     </div>
