--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,11 +6,13 @@
   </head>
 
   <body class="" data-spy="scroll" data-target="#myScrollspy" data-offset="20">
+    <div class="">
     {% include _base/nav.html %}
-    <main class="">
+    <main>
 	{{ content }}
     </main>
     {% include _base/footer.html %}
+    </div>
   </body>
 
 </html>
