--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,7 +31,7 @@ html, body {
 
 body {
     margin: 0 auto;
-    max-width: 34em;
+    max-width: 36em;
     
     font-size: var(--base-font-size);
     font-family: "Roboto", Arial, Helvetica, sans-serif;
@@ -39,21 +39,13 @@ body {
     
     line-height: 1.5;
     color: var(--black);
-    background-color: var(--main-white); /* var(--main-white); */
+    background-color: #fBfBfB;
 }
 
-.page-effect
-{
-    box-shadow:0 1px 6px rgba(0, 0, 0, 0.4);
+.page-effect {
+   
 }
 
-.wrapper {
-    margin: 0.75em;
-    padding-left: 1em;
-    padding-right: 1em;
-    background-color: var(--main-white);
-    border: 1px solid #e6e6e6;
-}
 .content {
     flex: 1 0 auto;    
 }
@@ -165,7 +157,7 @@ section {
     padding: var(--base-height-padding) .5em 0em .5em;
     margin-bottom: var(--base-height-padding);
 
-    border-top: 1.5px solid #ededed;
+    border-top: 1.5px solid rgba(200,200,200, 0.2);
 }
 
 .section-header {
@@ -287,6 +279,7 @@ blockquote {
 }
 
 #notes {
+    padding-bottom: 2em;
 }
 
 .note-content {
@@ -345,7 +338,7 @@ footer {
     border-radius: 6px;
     
     bottom:0;
-    padding-left: 0.75em;
+    padding-left: 2.5em;
 }
 
 .footer-symbol {
@@ -403,6 +396,7 @@ a:hover {
     .wrapper {
 	margin: 0;
 	border: none;
+	border-radius: 0px;
     }
 
     .tab-info { 
