--- a/_includes/_base/nav.html
+++ b/_includes/_base/nav.html
@@ -1,5 +1,5 @@
 <nav id="nav">
-  <div class="mb-0 w-100">
+  <div class="w-100">
     <span class="navbar-brand" style="font-size: 1.35em" href="{{site.url}}">
       <h2>Jon Tow</h2>
     </span>
