--- a/_includes/_sections/about.html
+++ b/_includes/_sections/about.html
@@ -26,13 +26,13 @@
       I also take up some server space over in these parts:
 
       <ul style="list-style: none; margin: 0em;">
-	<li>
+	<li style="padding-bottom: .25em;">
 	  &#128049;
 	  <a class="" href="https://github.com/jon-tow">   
 	    github
 	  </a>
 	</li>
-	<li>
+	<li style="padding-bottom: .25em;">
 	  &#128038;
 	  <a class="" href="https://twitter.com/jonbtow">
 	    twitter
