--- a/_includes/_base/footer.html
+++ b/_includes/_base/footer.html
@@ -4,7 +4,7 @@
     τ
   </div>
 
-  <div class="pt-1 pl-2">
+  <div class="pl-2" style="padding-top: .35em;">
     <p>©2019 - Built by Jon Tow with Jekyll
   </div>
 </footer>
