add hover effect

--- a/_includes/_sections/notes.html
+++ b/_includes/_sections/notes.html
@@ -4,8 +4,8 @@
     <h1 class="section-h2">
       <p>Notes</p>
     </h1>
-    <div class="top-link">
-      <a href="#nav" style="color: var(--second-color);" class=""> Back to top </a>
+    <div class="top-link ">
+      <a href="#nav"> Back to top </a>
     </div>
   </div>
 
