--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,11 +4,11 @@
     --second-color: #f8a442;
     --third-color: rgb(248, 96, 113);
     --bg-2: #241a4d;
-    
-    --main-white: #FCFCFC;    
+
+    --main-white: #FCFCFC;
     --black: #353535;
     --light-black: rgb(75, 75, 75, .85);
-    --bg: #fafafa;
+    --bg: #f9f9f9;
 
     /* Global Styles */
     --box-shadow: rgba(27, 27, 27, 0) 1px 3px 8px;
@@ -32,29 +32,29 @@ html, body {
 body {
     margin: 0 auto;
     max-width: 36em;
-    
+
     font-size: var(--base-font-size);
     font-family: "Roboto", Arial, Helvetica, sans-serif;
     font-weight: 500;
-    
+
     line-height: 1.425;
     color: var(--black);
     background-color: var(--bg);
 }
 
 .page-effect {
-   
+
 }
 
 .content {
-    flex: 1 0 auto;    
+    flex: 1 0 auto;
 }
 
 .third-color {
     color: var(--second-color);
 }
 
-.contents { 
+.contents {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -64,9 +64,9 @@ hr {
     border: 0;
     clear:both;
     display:block;
-    width: 100%;  
-    height: 1px;             
-    background-color: #EEEEEE;  
+    width: 100%;
+    height: 1px;
+    background-color: #EEEEEE;
 }
 
 b {
@@ -75,7 +75,7 @@ b {
 }
 
 /* List Styling */
-ol {   
+ol {
     list-style-type: decimal;
 }
 
@@ -115,7 +115,7 @@ h4 {
 nav {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;    
+    justify-content: flex-start;
     align-items: flex-start;
 
     width: 100%;
@@ -123,7 +123,7 @@ nav {
     padding: var(--base-height-padding) 0em 1em 1.5em;
 }
 
-.navbar {    
+.navbar {
     padding-left: 1em;
 }
 
