--- a/_includes/_sections/projects.html
+++ b/_includes/_sections/projects.html
@@ -6,9 +6,9 @@
         <p>Projects</p>
       </h1>
     </div>
-  
+
     <div class="section-content">
-  
+
       <!-- LANGUAGE -->
       <div class="project-type mb-2 pt-0">
         <h3>Language</h3>
@@ -22,23 +22,24 @@
               Lispp
             </a>
           </h4>
-          <p>          
+          <p>
             A little LISP interpreter built
             with Modern C++.
             <br>
-            <a class="third-color" href="https://github.com/jon-tow/lispp">github</a>.
+            <a class="github-link third-color"
+	       href="https://github.com/jon-tow/lispp">github</a>
           </p>
         </div>
         <div class="project-item col-sm">
         </div>
       </div>
       <!-- End of Projects Row -->
-  
+
       <!-- PLAYGROUND -->
       <div class="project-type mb-2 pt-2">
         <h3>Playground</h3>
       </div>
-  
+
       <!-- Note Projects Row -->
       <div class="project-row row pl-0">
         <!-- Column Content -->
@@ -51,9 +52,11 @@
           <p>
             A minimax implementation for deciding the best moves in a tic-tac-toe game.
             <br />
-            <a class="third-color" href="https://github.com/jon-tow/impossible-tic-tac-toe">github</a>.
+            <a class="github-link third-color"
+	       href="https://github.com/jon-tow/impossible-tic-tac-toe">github</a>
           </p>
         </div>
+
         <div class="project-item col-sm">
           <h4>
             <a href="projects/sudoku-solver/index.html">
@@ -63,12 +66,13 @@
           <p>
             A sudoku solver implemented with backtracking.
             <br />
-            <a class="third-color" href="https://github.com/jon-tow/sudoku-solver">github</a>.
+            <a class="github-link third-color"
+	       href="https://github.com/jon-tow/sudoku-solver">github</a>
           </p>
         </div>
       </div>
       <!-- End of Projects Row -->
-  
+
       <!-- Note Projects Row -->
       <div class="project-row row pl-0">
         <!-- Column Content -->
@@ -80,7 +84,8 @@
           </h4>
           <p>
             A visualization of the basic uninformed search algorithms, depth-first and breadth-first. <br />
-            <a class="third-color" href="https://github.com/jon-tow/maze-solver">github</a>.
+            <a class="github-link third-color"
+	       href="https://github.com/jon-tow/maze-solver">github</a>
           </p>
         </div>
         <div class="project-item col-sm">
@@ -88,6 +93,6 @@
       </div>
       <!-- End of Projects Row -->
     </div>
-  
+
     <!-- End of Content -->
   </section>
