--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,13 +6,13 @@
   </head>
 
   <body class="" data-spy="scroll" data-target="#myScrollspy" data-offset="20">
-    <div class="">
-    {% include _base/nav.html %}
-    <main>
+    <div class="wrapper page-effect">
+      {% include _base/nav.html %}
+      <main>
 	{{ content }}
-    </main>
-    {% include _base/footer.html %}
+      </main>
     </div>
+    {% include _base/footer.html %}
   </body>
 
 </html>
