Clean up before posts

--- a/_includes/_base/nav.html
+++ b/_includes/_base/nav.html
@@ -1,15 +1,15 @@
 <nav id="nav">
   <div class="w-100">
-    <span class="navbar-brand" style="font-size: 1.35em" href="{{site.url}}">
+    <span class="navbar-brand pb-0" style="font-size: 1.35em" href="{{site.url}}">
       <h2>Jon Tow</h2>
     </span>
 
-    <div class="navbar ml-0 navbar-expand mb-0 pt-0 pb-0">
+    <div class="navbar ml-0 navbar-expand mb-0 pt-0 ">
       <div class="collapse navbar-collapse" id="navbarNav">
 	<p>
-          <a href="#about"> about</a> / 
-          <a href="#project"> projects</a> / 
-          <a href="#notes"> notes</a> 
+          <a href="#about"> about</a> 
+          <a class="ml-2" href="#project"> projects</a> 
+          <a class="ml-2" href="#notes"> notes</a> 
 	</p>
       </div>
     </div>
