--- a/_includes/_sections/projects.html
+++ b/_includes/_sections/projects.html
@@ -18,7 +18,7 @@
         <!-- Column Content -->
         <div class="project-item col-sm">
           <h4>
-            <a href="https://github.com/jon-tow/lispp">
+            <a class="project-name" href="https://github.com/jon-tow/lispp">
               Lispp
             </a>
           </h4>
