--- a/_includes/_base/nav.html
+++ b/_includes/_base/nav.html
@@ -4,7 +4,7 @@
       <h2>Jon Tow</h2>
     </span>
 
-    <div class="navbar ml-0 navbar-expand mb-0 pt-0 ">
+    <div class="navbar ml-0 navbar-expand mb-0 pt-0 pb-0">
       <div class="collapse navbar-collapse" id="navbarNav">
 	<p>
           <a href="#about"> about</a> 
