--- a/_includes/_sections/about.html
+++ b/_includes/_sections/about.html
@@ -26,21 +26,21 @@
       I also take up some server space over in these parts:
 
       <ul style="list-style: none; margin: 0em;">
-	<li style="padding-bottom: .25em;">
+	<li style="padding-bottom: .325em;">
 	  &#128049;
-	  <a class="" href="https://github.com/jon-tow">   
+	  <a class="pl-1" href="https://github.com/jon-tow">   
 	    github
 	  </a>
 	</li>
-	<li style="padding-bottom: .25em;">
+	<li style="padding-bottom: .325em;">
 	  &#128038;
-	  <a class="" href="https://twitter.com/jonbtow">
+	  <a class="pl-1" href="https://twitter.com/jonbtow">
 	    twitter
 	  </a>
 	</li>
 	<li>
 	  &#128231;
-	  <a href="jonathantow1@gmail.com">
+	  <a class="pl-1" href="jonathantow1@gmail.com">
 	    jonathantow1 @ gmail
 	  </a>
 	</li>
